tree-wide: strip tool_* prefix from files
This was only necessary when the command line utilities were still in
the lxc tree.

Signed-off-by: Christian Brauner <christian.brauner@ubuntu.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 noinst_HEADERS = arguments.h \
-		 tool_list.h \
-		 tool_utils.h
+		 list.h \
+		 utils.h
 
 if IS_BIONIC
 noinst_HEADERS += include/ifaddrs.h
@@ -56,143 +56,143 @@ LDADD = -llxc
 lxc_attach_SOURCES = lxc_attach.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_autostart_SOURCES = lxc_autostart.c \
 			arguments.c \
 			arguments.h \
-			tool_list.h \
-			tool_utils.c \
-			tool_utils.h
+			list.h \
+			utils.c \
+			utils.h
 lxc_cgroup_SOURCES = lxc_cgroup.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_checkpoint_SOURCES = lxc_checkpoint.c \
 			 arguments.c \
 			 arguments.h \
-			 tool_list.h \
-			 tool_utils.c \
-			 tool_utils.h
+			 list.h \
+			 utils.c \
+			 utils.h
 lxc_config_SOURCES = lxc_config.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_console_SOURCES = lxc_console.c \
 		      arguments.c \
 		      arguments.h \
-		      tool_list.h \
-		      tool_utils.c \
-		      tool_utils.h
+		      list.h \
+		      utils.c \
+		      utils.h
 lxc_copy_SOURCES = lxc_copy.c \
 		   arguments.c \
 		   arguments.h \
-		   tool_list.h \
-		   tool_utils.c \
-		   tool_utils.h
+		   list.h \
+		   utils.c \
+		   utils.h
 lxc_create_SOURCES = lxc_create.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_destroy_SOURCES = lxc_destroy.c \
 		      arguments.c \
 		      arguments.h \
-		      tool_list.h \
-		      tool_utils.c \
-		      tool_utils.h
+		      list.h \
+		      utils.c \
+		      utils.h
 lxc_device_SOURCES = lxc_device.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_execute_SOURCES = lxc_execute.c \
 		      arguments.c \
 		      arguments.h \
-		      tool_list.h \
-		      tool_utils.c \
-		      tool_utils.h
+		      list.h \
+		      utils.c \
+		      utils.h
 lxc_freeze_SOURCES = lxc_freeze.c \
 		     arguments.c \
 		     arguments.h \
-		     tool_list.h \
-		     tool_utils.c \
-		     tool_utils.h
+		     list.h \
+		     utils.c \
+		     utils.h
 lxc_info_SOURCES = lxc_info.c \
 		   arguments.c \
 		   arguments.h \
-		   tool_list.h \
-		   tool_utils.c \
-		   tool_utils.h
+		   list.h \
+		   utils.c \
+		   utils.h
 lxc_ls_SOURCES = lxc_ls.c \
 		 arguments.c \
 		 arguments.h \
-		 tool_list.h \
-		 tool_utils.c \
-		 tool_utils.h
+		 list.h \
+		 utils.c \
+		 utils.h
 lxc_monitor_SOURCES = lxc_monitor.c \
 		      arguments.c \
 		      arguments.h \
-		      tool_list.h \
-		      tool_utils.c \
-		      tool_utils.h
+		      list.h \
+		      utils.c \
+		      utils.h
 lxc_snapshot_SOURCES = lxc_snapshot.c \
 		       arguments.c \
 		       arguments.h \
-		       tool_list.h \
-		       tool_utils.c \
-		       tool_utils.h
+		       list.h \
+		       utils.c \
+		       utils.h
 lxc_start_SOURCES = lxc_start.c \
 		    arguments.c \
 		    arguments.h \
-		    tool_list.h \
-		    tool_utils.c \
-		    tool_utils.h
+		    list.h \
+		    utils.c \
+		    utils.h
 lxc_stop_SOURCES = lxc_stop.c \
 		   arguments.c \
 		   arguments.h \
-		   tool_list.h \
-		   tool_utils.c \
-		   tool_utils.h
+		   list.h \
+		   utils.c \
+		   utils.h
 lxc_top_SOURCES = lxc_top.c \
 		  arguments.c \
 		  arguments.h \
-		  tool_list.h \
-		  tool_utils.c \
-		  tool_utils.h
+		  list.h \
+		  utils.c \
+		  utils.h
 lxc_unfreeze_SOURCES = lxc_unfreeze.c \
 		       arguments.c \
 		       arguments.h \
-		       tool_list.h \
-		       tool_utils.c \
-		       tool_utils.h
+		       list.h \
+		       utils.c \
+		       utils.h
 lxc_unshare_SOURCES = lxc_unshare.c \
 		      arguments.c \
 		      arguments.h \
-		      tool_list.h \
-		      tool_utils.c \
-		      tool_utils.h
+		      list.h \
+		      utils.c \
+		      utils.h
 lxc_wait_SOURCES = lxc_wait.c \
 		   arguments.c \
 		   arguments.h \
-		   tool_list.h \
-		   tool_utils.c \
-		   tool_utils.h
+		   list.h \
+		   utils.c \
+		   utils.h
 
 if ENABLE_DEPRECATED
 lxc_clone_SOURCES = lxc_clone.c \
 		    arguments.c \
 		    arguments.h \
-		    tool_list.h \
-		    tool_utils.c \
-		    tool_utils.h
+		    list.h \
+		    utils.c \
+		    utils.h
 endif
 
 if !HAVE_GETSUBOPT
